Fix add padding back to logo on mobile

--- a/public/assets/sass/template/headers/_header.scss
+++ b/public/assets/sass/template/headers/_header.scss
@@ -240,6 +240,12 @@
   padding-bottom: 15px;
 
   @include xs {
+    // padding: 0;
+  }
+}
+
+.header-sticky .header-logo {
+  @include xs {
     padding: 0;
   }
 }
